# project

./: CMakeLists.txt  build.cmd  build.sh  depends.conf  vcpkg.json
include/: header.h
src/: CMakeLists.txt  main.cc
test/: CMakeLists.txt
test/project/: sample_test.cc
