file(GLOB_RECURSE PROJECT_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})

target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${OUTPUT_BINARY_DIR})

if(WIN32)
  set(PROJECT_DEPENDENCIES
      "${CMAKE_CURRENT_BINARY_DIR}/fmt.dll")

  install(FILES ${PROJECT_DEPENDENCIES} DESTINATION ${OUTPUT_BINARY_DIR})
endif()
